--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "anychart-react": "^1.4.1",
     "axios": "^0.19.2",
     "bootswatch": "^4.5.0",
     "classnames": "^2.2.6",
