--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^9.1.5",
-    "toastr": "^2.1.4"
+    "toastr": "^2.1.4",
+    "yahoo-finance": "^0.3.7"
   },
   "scripts": {
     "start": "react-scripts start",
