--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "chart.js": "^4.0.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
