--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@testing-library/user-event": "^7.1.2",
     "anychart-react": "^1.4.1",
     "axios": "^0.19.2",
+    "bootstrap": "^5.2.3",
     "bootswatch": "^4.5.0",
     "classnames": "^2.2.6",
     "currency-formatter": "^1.5.5",
     "primeicons": "^3.0.0-rc.1",
     "primereact": "^4.2.1",
     "react": "^16.14.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^16.14.0",
     "react-icons": "^4.6.0",
     "react-router-dom": "^5.2.0",
